--- a/HolaMundo.ipynb
+++ b/HolaMundo.ipynb
@@ -19,6 +19,7 @@
       "outputs": [],
       "source": [
         "#Este es un comentario de prueba\n",
+        "#comentario prueba 2\n",
         "import numpy as np\n",
         "from matplotlib import pyplot as plt\n"
       ]
